Added potential strategy for basic/advanced classification

--- a/basicness_classification.ipynb
+++ b/basicness_classification.ipynb
@@ -1,14 +1,28 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
+   "cell_type": "markdown",
+   "source": [
+    "Binary classification (basic/advanced) for synsets\n",
+    "\n",
+    "We use the already classified synsets from data folder as training/test set.\n",
+    "For each synset provided there are one or more relevant words that belongs to the sysnet. And there is the label (basic/advanced) for the synset.\n",
+    "We then consider as features for classification the following:\n",
+    "1. The depth of the sysnet in the WordNet hierarchy\n",
+    "2. The pronunciation complexity of the first word **in the dataset**\n",
+    "3. The length of the first word **in the dataset**\n",
+    "4. The synset classification to concrete or abstract concept\n",
+    "\n",
+    "Given a new synset we want to classify we then get its features by:\n",
+    "1. Getting the depth of the sysnet in the WordNet hierarchy\n",
+    "2. Getting the pronunciation complexity of the first (most frequently used) word **in the synset**\n",
+    "3. Getting the length of the first (most frequently used) word **in the synset**\n",
+    "4. Predicting the synset classification to concrete or abstract concept"
+   ],
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "id": "ee2a4e9d05762d02"
   }
  ],
  "metadata": {
