Updated potential strategy for basic/advanced classification

--- a/basicness_classification.ipynb
+++ b/basicness_classification.ipynb
@@ -6,7 +6,8 @@
     "Binary classification (basic/advanced) for synsets\n",
     "\n",
     "We use the already classified synsets from data folder as training/test set.\n",
-    "For each synset provided there are one or more relevant words that belongs to the sysnet. And there is the label (basic/advanced) for the synset.\n",
+    "For each synset provided there are one or more relevant words that belongs to the synset. And there is the label (basic/advanced) for the synset.\n",
+    "\n",
     "We then consider as features for classification the following:\n",
     "1. The depth of the sysnet in the WordNet hierarchy\n",
     "2. The pronunciation complexity of the first word **in the dataset**\n",
@@ -17,7 +18,10 @@
     "1. Getting the depth of the sysnet in the WordNet hierarchy\n",
     "2. Getting the pronunciation complexity of the first (most frequently used) word **in the synset**\n",
     "3. Getting the length of the first (most frequently used) word **in the synset**\n",
-    "4. Predicting the synset classification to concrete or abstract concept"
+    "4. Predicting the synset classification to concrete or abstract concept\n",
+    "\n",
+    "After defining data we train a binary classifier to predict the label (basic/advanced) of the synset.\n",
+    "Since we have a small dataset we use a simple logistic regression classifier trained using 5-fold cross validation."
    ],
    "metadata": {
     "collapsed": false
