Added JSON data load and format into Dataframe

--- a/basicness_classification.ipynb
+++ b/basicness_classification.ipynb
@@ -9,7 +9,7 @@
     "For each synset provided there are one or more relevant words that belongs to the synset. And there is the label (basic/advanced) for the synset.\n",
     "\n",
     "We then consider as features for classification the following:\n",
-    "1. The depth of the sysnet in the WordNet hierarchy\n",
+    "1. The depth of the synset in the WordNet hierarchy\n",
     "2. The pronunciation complexity of the first word **in the dataset**\n",
     "3. The length of the first word **in the dataset**\n",
     "4. The synset classification to concrete or abstract concept\n",
@@ -21,12 +21,191 @@
     "4. Predicting the synset classification to concrete or abstract concept\n",
     "\n",
     "After defining data we train a binary classifier to predict the label (basic/advanced) of the synset.\n",
-    "Since we have a small dataset we use a simple logistic regression classifier trained using 5-fold cross validation."
+    "Since we have a small dataset we use a simple logistic regression classifier trained using 5-fold cross validation.\n",
+    "\n",
+    "Steps:\n",
+    "1. Load and format the JSON dataset (synsets, word(s), labels, definitions) "
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "ee2a4e9d05762d02"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\Gianl\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import List, Dict\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "from pandas import DataFrame\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.corpus.reader import Synset\n",
+    "from nltk.corpus import wordnet as wn\n",
+    "nltk.download('wordnet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T09:25:47.712863500Z",
+     "start_time": "2024-04-15T09:25:47.688131100Z"
+    }
+   },
+   "id": "1bd01b4e9d9962d4"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 1. Load and format the JSON dataset (synsets, word(s), labels, definitions)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6466c50de33d51bf"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "outputs": [],
+   "source": [
+    "with open('data/1.json') as f:\n",
+    "    data = json.load(f)\n",
+    "    dataset = data['dataset']\n",
+    "    labels = data['answers']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T09:25:47.769862800Z",
+     "start_time": "2024-04-15T09:25:47.702120100Z"
+    }
+   },
+   "id": "6504e45c9fc1ff6d"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Get Synset from string of the form \"Synset('word.pos.n')\""
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6226de7c56eca0db"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "outputs": [],
+   "source": [
+    "def get_synset_from_string(s: str) -> Synset:\n",
+    "    # find first ' and last '\n",
+    "    start = s.find('\\'')\n",
+    "    end = s.rfind('\\'')\n",
+    "    synset_name = s[start + 1:end]\n",
+    "    return wn.synset(synset_name)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T09:25:47.769862800Z",
+     "start_time": "2024-04-15T09:25:47.720864100Z"
+    }
+   },
+   "id": "d47500d668011346"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Select synset and word(s) from dataset"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "316f22dd3df6bda8"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "outputs": [],
+   "source": [
+    "# dataframe containing synset, word(s), definition, label\n",
+    "dataset_df: DataFrame = pd.DataFrame(columns=['synset', 'words', 'label', 'definition'])\n",
+    "\n",
+    "splitted_list: List[List[str]] = []\n",
+    "label_index = 0\n",
+    "for row in dataset:\n",
+    "    row_list = []\n",
+    "    temp_split = row.split(':')\n",
+    "    for elem in temp_split:\n",
+    "        splitted = elem.split('|')\n",
+    "        row_list.extend([x for x in splitted])\n",
+    "    \n",
+    "    synset = get_synset_from_string(row_list[0])\n",
+    "    words = row_list[1]\n",
+    "    words = words.split(',')\n",
+    "    words = [word.strip() for word in words]\n",
+    "    words = \",\".join(words)\n",
+    "    label = labels[label_index]\n",
+    "    definition = row_list[3]\n",
+    "    dataset_df = pd.concat(\n",
+    "        [dataset_df, pd.DataFrame([[synset, words, label, definition]], columns=['synset', 'words', 'label', 'definition'])], \n",
+    "        ignore_index=True)\n",
+    "    label_index += 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T09:25:47.920863Z",
+     "start_time": "2024-04-15T09:25:47.761862400Z"
+    }
+   },
+   "id": "1bd456c7d41782ce"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                      synset  \\\n0                         Synset('war.n.01')   \n1                     Synset('fiefdom.n.01')   \n2                         Synset('bed.n.03')   \n3  Synset('return_on_invested_capital.n.01')   \n4                     Synset('texture.n.02')   \n\n                                               words     label  \\\n0                                        war,warfare     basic   \n1                                            fiefdom  advanced   \n2                                         bed,bottom     basic   \n3  return on invested capital,return on investmen...  advanced   \n4                                            texture     basic   \n\n                                          definition  \n0      the waging of armed conflict against an enemy  \n1             the domain controlled by a feudal lord  \n2   a depression forming the ground under a body ...  \n3   (corporate finance) the amount, expressed as ...  \n4                 the essential quality of something  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>synset</th>\n      <th>words</th>\n      <th>label</th>\n      <th>definition</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Synset('war.n.01')</td>\n      <td>war,warfare</td>\n      <td>basic</td>\n      <td>the waging of armed conflict against an enemy</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Synset('fiefdom.n.01')</td>\n      <td>fiefdom</td>\n      <td>advanced</td>\n      <td>the domain controlled by a feudal lord</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Synset('bed.n.03')</td>\n      <td>bed,bottom</td>\n      <td>basic</td>\n      <td>a depression forming the ground under a body ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Synset('return_on_invested_capital.n.01')</td>\n      <td>return on invested capital,return on investmen...</td>\n      <td>advanced</td>\n      <td>(corporate finance) the amount, expressed as ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Synset('texture.n.02')</td>\n      <td>texture</td>\n      <td>basic</td>\n      <td>the essential quality of something</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T09:25:47.940863Z",
+     "start_time": "2024-04-15T09:25:47.922863200Z"
+    }
+   },
+   "id": "36b8663e39c572e1"
   }
  ],
  "metadata": {
