Added features for input data: synset_depth, pronunce_complexity, first_word_length

--- a/basicness_classification.ipynb
+++ b/basicness_classification.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 210,
    "outputs": [
     {
      "name": "stderr",
@@ -41,14 +41,17 @@
      "text": [
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     C:\\Users\\Gianl\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package cmudict to\n",
+      "[nltk_data]     C:\\Users\\Gianl\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package cmudict is already up-to-date!\n"
      ]
     },
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 146,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,13 +65,16 @@
     "import nltk\n",
     "from nltk.corpus.reader import Synset\n",
     "from nltk.corpus import wordnet as wn\n",
-    "nltk.download('wordnet')"
+    "from nltk.corpus import cmudict\n",
+    "nltk.download('wordnet')\n",
+    "# download the CMU Pronouncing Dictionary\n",
+    "nltk.download('cmudict')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T09:25:47.712863500Z",
-     "start_time": "2024-04-15T09:25:47.688131100Z"
+     "end_time": "2024-04-15T10:00:50.819921700Z",
+     "start_time": "2024-04-15T10:00:50.788915300Z"
     }
    },
    "id": "1bd01b4e9d9962d4"
@@ -76,7 +82,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 1. Load and format the JSON dataset (synsets, word(s), labels, definitions)"
+    "## 1. Load and format the JSON dataset (synsets, word(s), labels, definitions)"
    ],
    "metadata": {
     "collapsed": false
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 211,
    "outputs": [],
    "source": [
     "with open('data/1.json') as f:\n",
@@ -96,8 +102,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T09:25:47.769862800Z",
-     "start_time": "2024-04-15T09:25:47.702120100Z"
+     "end_time": "2024-04-15T10:00:50.874910200Z",
+     "start_time": "2024-04-15T10:00:50.807914800Z"
     }
    },
    "id": "6504e45c9fc1ff6d"
@@ -114,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 212,
    "outputs": [],
    "source": [
     "def get_synset_from_string(s: str) -> Synset:\n",
@@ -127,11 +133,52 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T09:25:47.769862800Z",
-     "start_time": "2024-04-15T09:25:47.720864100Z"
+     "end_time": "2024-04-15T10:00:50.874910200Z",
+     "start_time": "2024-04-15T10:00:50.823929Z"
     }
    },
    "id": "d47500d668011346"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Calculate pronunce complexity based on number of phonemes\n",
+    "If word not found in dictionary return 50, indicating high complexity (max complexity is around 25 in this dataset)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c931e622e1aeaf0d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "outputs": [],
+   "source": [
+    "pronunce_dict = cmudict.dict()\n",
+    "\n",
+    "def calculate_pronunce_complexity(sentence: str) -> int:\n",
+    "    sentence = sentence.split()\n",
+    "    complexity = 0\n",
+    "    for word in sentence:\n",
+    "        if word.lower() in pronunce_dict:\n",
+    "            phonemes = pronunce_dict[word.lower()][0]  # get phonetic representation\n",
+    "            complexity += len(phonemes)  # complexity based on number of phonemes\n",
+    "        else: # TODO check if returning high complexity if one word not found is better. Maybe\n",
+    "            return 50\n",
+    "    \n",
+    "    if complexity == 0: # if word not found in dictionary return high complexity\n",
+    "        return 50\n",
+    "    return complexity"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T10:00:51.188911700Z",
+     "start_time": "2024-04-15T10:00:50.838920Z"
+    }
+   },
+   "id": "f4e1feb1b71871ea"
   },
   {
    "cell_type": "markdown",
@@ -145,11 +192,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 214,
    "outputs": [],
    "source": [
     "# dataframe containing synset, word(s), definition, label\n",
-    "dataset_df: DataFrame = pd.DataFrame(columns=['synset', 'words', 'label', 'definition'])\n",
+    "cols = ['synset', 'words', 'synset_depth', 'pronunce_complexity', 'first_word_length', 'label', 'definition']\n",
+    "dataset_df: DataFrame = pd.DataFrame(columns=cols)\n",
     "\n",
     "splitted_list: List[List[str]] = []\n",
     "label_index = 0\n",
@@ -160,49 +208,63 @@
     "        splitted = elem.split('|')\n",
     "        row_list.extend([x for x in splitted])\n",
     "    \n",
+    "    # get synset\n",
     "    synset = get_synset_from_string(row_list[0])\n",
+    "    # get words\n",
     "    words = row_list[1]\n",
     "    words = words.split(',')\n",
     "    words = [word.strip() for word in words]\n",
+    "    # take only first word for now, it should be the most frequently used\n",
+    "    first_word = words[0]\n",
     "    words = \",\".join(words)\n",
+    "    # get synset depth\n",
+    "    synset_depth = synset.max_depth()\n",
+    "    # get pronunce complexity\n",
+    "    pronunce = calculate_pronunce_complexity(first_word)\n",
+    "    # get first word length\n",
+    "    first_word_length = len(first_word)\n",
+    "    # get label\n",
     "    label = labels[label_index]\n",
+    "    # get definition\n",
     "    definition = row_list[3]\n",
+    "    # add row to dataframe\n",
+    "    new_row = [[synset, first_word, synset_depth, pronunce, first_word_length, label, definition]]\n",
     "    dataset_df = pd.concat(\n",
-    "        [dataset_df, pd.DataFrame([[synset, words, label, definition]], columns=['synset', 'words', 'label', 'definition'])], \n",
+    "        [dataset_df, pd.DataFrame(new_row, columns=cols)], \n",
     "        ignore_index=True)\n",
     "    label_index += 1"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T09:25:47.920863Z",
-     "start_time": "2024-04-15T09:25:47.761862400Z"
+     "end_time": "2024-04-15T10:00:51.480910700Z",
+     "start_time": "2024-04-15T10:00:51.192939900Z"
     }
    },
    "id": "1bd456c7d41782ce"
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 215,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                      synset  \\\n0                         Synset('war.n.01')   \n1                     Synset('fiefdom.n.01')   \n2                         Synset('bed.n.03')   \n3  Synset('return_on_invested_capital.n.01')   \n4                     Synset('texture.n.02')   \n\n                                               words     label  \\\n0                                        war,warfare     basic   \n1                                            fiefdom  advanced   \n2                                         bed,bottom     basic   \n3  return on invested capital,return on investmen...  advanced   \n4                                            texture     basic   \n\n                                          definition  \n0      the waging of armed conflict against an enemy  \n1             the domain controlled by a feudal lord  \n2   a depression forming the ground under a body ...  \n3   (corporate finance) the amount, expressed as ...  \n4                 the essential quality of something  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>synset</th>\n      <th>words</th>\n      <th>label</th>\n      <th>definition</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Synset('war.n.01')</td>\n      <td>war,warfare</td>\n      <td>basic</td>\n      <td>the waging of armed conflict against an enemy</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Synset('fiefdom.n.01')</td>\n      <td>fiefdom</td>\n      <td>advanced</td>\n      <td>the domain controlled by a feudal lord</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Synset('bed.n.03')</td>\n      <td>bed,bottom</td>\n      <td>basic</td>\n      <td>a depression forming the ground under a body ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Synset('return_on_invested_capital.n.01')</td>\n      <td>return on invested capital,return on investmen...</td>\n      <td>advanced</td>\n      <td>(corporate finance) the amount, expressed as ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Synset('texture.n.02')</td>\n      <td>texture</td>\n      <td>basic</td>\n      <td>the essential quality of something</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                        synset                       words  \\\n0                           Synset('war.n.01')                         war   \n1                       Synset('fiefdom.n.01')                     fiefdom   \n2                           Synset('bed.n.03')                         bed   \n3    Synset('return_on_invested_capital.n.01')  return on invested capital   \n4                       Synset('texture.n.02')                     texture   \n..                                         ...                         ...   \n499                     Synset('reading.n.03')                     reading   \n500           Synset('sanctimoniousness.n.01')           sanctimoniousness   \n501                  Synset('chalcedony.n.01')                  chalcedony   \n502                    Synset('stopcock.n.01')                    stopcock   \n503                  Synset('backpacker.n.01')                  backpacker   \n\n    synset_depth pronunce_complexity first_word_length     label  \\\n0              7                   3                 3     basic   \n1              6                   6                 7  advanced   \n2              5                   3                 3     basic   \n3              6                  22                26  advanced   \n4              9                   6                 7     basic   \n..           ...                 ...               ...       ...   \n499            6                   5                 7     basic   \n500           10                  50                17  advanced   \n501            8                   9                10  advanced   \n502           11                  50                 8  advanced   \n503           10                  50                10     basic   \n\n                                            definition  \n0        the waging of armed conflict against an enemy  \n1               the domain controlled by a feudal lord  \n2     a depression forming the ground under a body ...  \n3     (corporate finance) the amount, expressed as ...  \n4                   the essential quality of something  \n..                                                 ...  \n499   a datum about some physical state that is pre...  \n500         the quality of being hypocritically devout  \n501   a milky or greyish translucent to transparent...  \n502   faucet consisting of a rotating device for re...  \n503                       a hiker who wears a backpack  \n\n[504 rows x 7 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>synset</th>\n      <th>words</th>\n      <th>synset_depth</th>\n      <th>pronunce_complexity</th>\n      <th>first_word_length</th>\n      <th>label</th>\n      <th>definition</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Synset('war.n.01')</td>\n      <td>war</td>\n      <td>7</td>\n      <td>3</td>\n      <td>3</td>\n      <td>basic</td>\n      <td>the waging of armed conflict against an enemy</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Synset('fiefdom.n.01')</td>\n      <td>fiefdom</td>\n      <td>6</td>\n      <td>6</td>\n      <td>7</td>\n      <td>advanced</td>\n      <td>the domain controlled by a feudal lord</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Synset('bed.n.03')</td>\n      <td>bed</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>basic</td>\n      <td>a depression forming the ground under a body ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Synset('return_on_invested_capital.n.01')</td>\n      <td>return on invested capital</td>\n      <td>6</td>\n      <td>22</td>\n      <td>26</td>\n      <td>advanced</td>\n      <td>(corporate finance) the amount, expressed as ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Synset('texture.n.02')</td>\n      <td>texture</td>\n      <td>9</td>\n      <td>6</td>\n      <td>7</td>\n      <td>basic</td>\n      <td>the essential quality of something</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>499</th>\n      <td>Synset('reading.n.03')</td>\n      <td>reading</td>\n      <td>6</td>\n      <td>5</td>\n      <td>7</td>\n      <td>basic</td>\n      <td>a datum about some physical state that is pre...</td>\n    </tr>\n    <tr>\n      <th>500</th>\n      <td>Synset('sanctimoniousness.n.01')</td>\n      <td>sanctimoniousness</td>\n      <td>10</td>\n      <td>50</td>\n      <td>17</td>\n      <td>advanced</td>\n      <td>the quality of being hypocritically devout</td>\n    </tr>\n    <tr>\n      <th>501</th>\n      <td>Synset('chalcedony.n.01')</td>\n      <td>chalcedony</td>\n      <td>8</td>\n      <td>9</td>\n      <td>10</td>\n      <td>advanced</td>\n      <td>a milky or greyish translucent to transparent...</td>\n    </tr>\n    <tr>\n      <th>502</th>\n      <td>Synset('stopcock.n.01')</td>\n      <td>stopcock</td>\n      <td>11</td>\n      <td>50</td>\n      <td>8</td>\n      <td>advanced</td>\n      <td>faucet consisting of a rotating device for re...</td>\n    </tr>\n    <tr>\n      <th>503</th>\n      <td>Synset('backpacker.n.01')</td>\n      <td>backpacker</td>\n      <td>10</td>\n      <td>50</td>\n      <td>10</td>\n      <td>basic</td>\n      <td>a hiker who wears a backpack</td>\n    </tr>\n  </tbody>\n</table>\n<p>504 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 150,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset_df.head()"
+    "dataset_df.head(600)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T09:25:47.940863Z",
-     "start_time": "2024-04-15T09:25:47.922863200Z"
+     "end_time": "2024-04-15T10:00:51.498909900Z",
+     "start_time": "2024-04-15T10:00:51.489915700Z"
     }
    },
    "id": "36b8663e39c572e1"
