Added concrete and abstract words extraction from xls dataset

--- a/basicness_classification.ipynb
+++ b/basicness_classification.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 216,
    "outputs": [
     {
      "name": "stderr",
@@ -51,7 +51,7 @@
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 210,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,6 +61,7 @@
     "import json\n",
     "import pandas as pd\n",
     "from pandas import DataFrame\n",
+    "import openpyxl\n",
     "\n",
     "import nltk\n",
     "from nltk.corpus.reader import Synset\n",
@@ -73,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-15T10:00:50.819921700Z",
-     "start_time": "2024-04-15T10:00:50.788915300Z"
+     "end_time": "2024-04-15T10:47:21.048927100Z",
+     "start_time": "2024-04-15T10:47:21.018858Z"
     }
    },
    "id": "1bd01b4e9d9962d4"
@@ -107,6 +108,68 @@
     }
    },
    "id": "6504e45c9fc1ff6d"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.2 Load words with concreteness score from xls file"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8ce56d0da2ed411a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "outputs": [],
+   "source": [
+    "# TODO tune concreteness threshold\n",
+    "concreteness_df = pd.read_excel(\"data/brysbaert_concreteness_ratings.xlsx\")\n",
+    "# extract list of words with concreteness >= 3 and < 3\n",
+    "concrete_words = concreteness_df.query('conc_score >= 3')['word'].tolist() # words with concreteness >= 3\n",
+    "abstract_words = concreteness_df.query('conc_score < 3')['word'].tolist() # words with concreteness < 3"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T10:52:26.780154900Z",
+     "start_time": "2024-04-15T10:52:23.206157700Z"
+    }
+   },
+   "id": "29b66389c01abfa4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18776\n",
+      "['accumulate', 'add', 'aerially', 'ahead', 'aiming', 'airless', 'alternation', 'anaphylactic', 'anatomically', 'annotate']\n",
+      "\n",
+      "21178\n",
+      "['eh', 'essentialness', 'although', 'spirituality', 'would', 'spiritually', 'whatsoever', 'conceptualistic', 'conventionalism', 'belief']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(concrete_words))\n",
+    "print(concrete_words[:10])\n",
+    "print()\n",
+    "print(len(abstract_words))\n",
+    "print(abstract_words[:10])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-15T10:52:53.924874500Z",
+     "start_time": "2024-04-15T10:52:53.906876Z"
+    }
+   },
+   "id": "e23efde2334deef7"
   },
   {
    "cell_type": "markdown",
@@ -268,6 +331,57 @@
     }
    },
    "id": "36b8663e39c572e1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import spacy\n",
+    "from nltk.corpus import wordnet as wn\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "spacy.cli.download(\"en_core_web_md\")\n",
+    "\n",
+    "# download en_core_web_md\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
+    "classes = ['concrete', 'abstract']\n",
+    "train_set = [['spoon', 'fork', 'knife', 'table', 'chair', 'bed', 'car', 'bus', 'train', 'plane', 'computer', 'phone',\n",
+    "              'apple', 'owl', 'house', 'tree', 'flower', 'dog', 'cat', 'bird'],\n",
+    "             [\"anxiety\", \"being\", \"anger\", \"beauty\", \"charity\", \"beliefs\", \"adventure\",\n",
+    "              \"confusion\", \"chaos\", \"despair\", \"beauty\", \"comfort\", \"communication\", \"birthday\",\n",
+    "              \"fear\", \"freedom\", \"happiness\", \"brilliance\", \"culture\", \"curiosity\", \"career\",\n",
+    "              \"pain\", \"liberty\", \"hate\", \"courage\", \"deceit\", \"democracy\", \"childhood\",\n",
+    "              \"pleasure\", \"luxury\", \"indifference\", \"dedication\", \"energy\", \"friendship\", \"death\",\n",
+    "              \"satisfaction\", \"misery\", \"joy\", \"determination\", \"failure\", \"interest\", \"future\",\n",
+    "              \"sensitivity\", \"nervousness\", \"grief\", \"generosity\", \"faith\", \"knowledge\", \"holiday\",\n",
+    "              \"stress\", \"openness\", \"love\", \"honesty\", \"motivation\", \"thought\", \"life\",\n",
+    "              \"sympathy\", \"peace\", \"sadness\", \"patience\", \"opportunity\", \"sacrifice\", \"marriage\",\n",
+    "              \"warmth\", \"pessimism\", \"sorrow\", \"trust\", \"perseverance\", \"wisdom\", \"past\"\n",
+    "              ]]\n",
+    "\n",
+    "X = np.stack([list(nlp(w))[0].vector for part in train_set for w in part])\n",
+    "y = [label for label, part in enumerate(train_set) for _ in part]\n",
+    "classifier = LogisticRegression(C=0.1, class_weight='balanced').fit(X, y)\n",
+    "synsets = ['war.n.01', 'fiefdom.n.01', 'bed.n.03', 'return_on_invested_capital.n.01', 'texture.n.02', 'news.n.01',\n",
+    "           'look.n.02']\n",
+    "\n",
+    "for synset_str in synsets:\n",
+    "    synset = wn.synset(synset_str)\n",
+    "    synset_name = synset.lemma_names()[0]\n",
+    "    synset_vector = list(nlp(synset_name))[0].vector\n",
+    "    synset_class = classifier.predict([synset_vector])[0]\n",
+    "    # print classification\n",
+    "    print(f'{synset_name} -> {classes[synset_class]}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "73bb9c84bd75e1ed"
   }
  ],
  "metadata": {
